--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
 				<a href="https://github.com/antimatter15/splat">Github</a
 				>.
 			</small>
-		</p>
+			</p>
+			<p>Drag and drop anywhere to convert a trained .ply file.</p>
 
 			<details>
 			<summary>Use mouse or arrow keys to navigate.</summary>
